src/test/deca/context/invalid/created/acces_field/acces_sur_null.deca
// Description :
//   	appel d'une methode sur un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.65) Le membre gauche n'est pas de type 'class'

{
null.met;
}